-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.7
-
None
-
3
-
88b1c9623 (dev), 229ed81c7 (6.7), 8c2e6967b (tqtc/lts-6.5)
-
Foundation Sprint 108
QAnyStringView(char-ish constructors have become rather slow in 6.5 compared to 6.4.
This is because the arguments are convertible to QString, so the perfectly-forwarding if_convertible_to<QString> is selected in favour of the is_compatible_char one.
- resulted from
-
QTBUG-124365 Port QString::arg() to QAnyStringView
-
- Closed
-